# apptile-seed

./: .gitignore  AGENTS.md  App.tsx  ExportOptions.plist  PIPActivityRoot.tsx  PIPActivityRootWithoutPIP.tsx  androidProjectSetup.js  app.json  apptile.config.json  babel.config.js  commonProjectSetup.js  index.js  iosProjectSetup.js  metro.config.js  package-lock.json  package.json  preview-generation-script.js  react-native.config.js  screenParams.ts  styles.ts  supabase-setup.sql  tsconfig.json
analytics/: index.ts
android/app/: CMakeLists.txt  androidStore.jks  apptile.gradle  build.gradle  google-services.json
android/app/src/clevertap/disabled/java/com/apptileseed/: CleverTapIntegrationStub.kt
android/app/src/clevertap/enabled/java/com/apptileseed/: CleverTapIntegrationFactory.kt  CleverTapIntegrationImpl.kt
android/app/src/klaviyo/disabled/java/com/apptileseed/: KlaviyoIntegrationFactory.kt  KlaviyoIntegrationStub.kt
android/app/src/klaviyo/enabled/java/com/apptileseed/: KlaviyoIntegrationFactory.kt  KlaviyoIntegrationImpl.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: localBundleTracker.json  mappls-conf.txt
android/app/src/main/java/com/apptileseed/: CleverTapIntegrationInterface.kt  FloatingButton.kt  KlaviyoIntegrationInterface.kt  LauncherActivity.kt  MainActivity.kt  MainApplication.kt  PIPActivity.kt  PIPModule.kt  PIPPackage.kt  RNApptileModule.java  RNApptilePackage.java  RNGetValuesPackage.java
android/app/src/main/res/drawable/: ic_outlined_refresh.xml
android/app/src/main/res/values/: strings.xml
(+156 files in other folders)
